--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -318,7 +318,7 @@
                                                     <div class="card-content">
                                                         <p>{{ node.extra_content.description }}</p>
                                                     </div>
-                                                    <div class="card-action">{{ node.extra_content.url }}
+                                                    <div class="card-action">
                                                         <a href="{{ node.extra_content.url }}">Ver</a>
                                                     </div>
                                                 </div>
