Perform upload video images

--- a/skyfolk/templates/account/welcomestep1.html
+++ b/skyfolk/templates/account/welcomestep1.html
@@ -33,7 +33,7 @@
                     <div class="col s12 m12 l4">
                         <div class="card white">
                             <div class="card-content">
-                                <span class="card-title grey-text darken-1">{{ choice.choice_value|interest_to_icon|safe }} {{ choice.choice_label }}</span>
+                                <span class="card-title grey-text darken-1">{{ choice.data.value|interest_to_icon|safe }} {{ choice.choice_label }}</span>
                             </div>
                             <div class="card-action">
                                 <p>
