+ Notificaciones real time via email

--- a/skyfolk/templates/account/notification-right-menu.html
+++ b/skyfolk/templates/account/notification-right-menu.html
@@ -24,7 +24,7 @@ UTILS_N.conn_socket();
                 {% avatar notification.actor %}
             </div>
             <span class="title">{{ notification.verb|safe }} {% if notification.description %}
-                {{ notification.description|safe }} {% endif %}</span>
+                <br><br><small>{{ notification.description|safe }}</small> {% endif %}</span>
             <p><i>{{ notification.timestamp|naturaltime }}</i></p>
             {% if notification.level == "friendrequest" %}
             <div class="notification-buttons">
