--- a/postman/templates/postman/inbox.html
+++ b/postman/templates/postman/inbox.html
@@ -5,3 +5,8 @@
 {% block pm_recipient_header %}{% endblock %}
 {% block pm_date %}{% trans "Received" %}{% endblock %}
 {% block pm_recipient_cell %}{% endblock %}
+{% block pm_footer_info %}
+    <script>
+        $('#postman_menu').find('li:nth-child(1)').css({'background-color': 'rgba(0,0,0,0.1)', 'color': '#1e88e5'});
+    </script>
+{% endblock %}
