--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -76,7 +76,27 @@ Template para el perfil de cada usuario
                 {% include "account/card-user.html" %}
             </div>
             <div class="row clearfix">
-                <div class="col l8 m12 s12">
+                <div class="col l4 m12 s12 push-l8">
+                    <div class="row">
+                        {% comment %} CARD USUARIO - FOTO PERFIL ETC...  {% endcomment %}
+
+                        {% comment %}
+                PIN ARRIBA IZQUIERDA
+                {% endcomment %}
+                        {% include "account/pin-left-top.html" %}
+                        {% comment %}
+                PIN ARRIBA DERECHA
+                {% endcomment %}
+                        {% include "account/pin-right-top.html" %}
+
+                    </div>
+                    {% comment %}
+            PIN ABAJO
+            {% endcomment %}
+                    {% include "account/pin-bottom.html" %}
+
+                </div>
+                <div class="col l8 m12 s12 pull-l4">
                     <div class="col s12">
                         <div id="div-separator">
                             <div class="sidebar card" id="tab-container">
@@ -108,7 +128,6 @@ Template para el perfil de cada usuario
                                             <script src="{{ STATIC_URL }}js/{{ component }}"></script>
                                         </div>
                                         {% if publications|length == 0 %}
-                                            <!-- Si el usuario no tiene comentarios, proponemos uno -->
                                             <div class="no-comments" id="without-comments">
                                                 <span class="no-comments-text-info">¡{{ user_profile.username }} no tiene comentarios!</span>
                                                 <a id="{% if user_profile.id != request.user.id %}compose-new-no-comments{% else %}compose-self-new-no-comments{% endif %}"
@@ -128,29 +147,6 @@ Template para el perfil de cada usuario
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col l4 m12 s12">
-                    <!-- Contenedor principal, engloba el tablon, widgets... [IMPORTANTE]-->
-                    <div class="row">
-                        <!-- Para el diseño de la rama develop, se cambia col-md-6 por col-md-12 -->
-                        {% comment %} CARD USUARIO - FOTO PERFIL ETC...  {% endcomment %}
-
-                        {% comment %}
-                PIN ARRIBA IZQUIERDA
-                {% endcomment %}
-                        {% include "account/pin-left-top.html" %}
-                        <!-- PIN PEQUEÑO - 2 -->
-                        {% comment %}
-                PIN ARRIBA DERECHA
-                {% endcomment %}
-                        {% include "account/pin-right-top.html" %}
-
-                    </div>
-                    {% comment %}
-            PIN ABAJO
-            {% endcomment %}
-                    {% include "account/pin-bottom.html" %}
-
                 </div>
             </div>
             </div>
@@ -174,35 +170,21 @@ Template para el perfil de cada usuario
                         }
                     });
 
-                    var followed = new Waypoint.Infinite({
-                        element: $('#list-following'),
-                        items: '.following-item',
-                        offset: 'bottom-in-view',
-                        more: '.infinite-more-followed',
-                        onBeforePageLoad: function () {
-                            $('.load_following').show();
-                        },
-                        onAfterPageLoad: function () {
-                            $('.load_following').hide();
-                        },
-                        enabled: false
-                    });
-
+                    var submitFollowed = false;
                     $('#tab-container')
                         .bind('easytabs:after', function (evt, tab, panel, data) {
                             if (tab[0].text.toLowerCase() === 'seguidos') {
-                                if (typeof infinite['waypoint'] !== 'undefined')
-                                    infinite['waypoint'].disable();
-                                    followed['waypoint'].enable();
-                                    $.get("?pagefollowing=1&qs=following", function (data, status) {
-                                        $('#load_following').show();
-                                        $('#list-following').replaceWith(data);
-                                        $('#load_following').hide();
-                                    });
+                                if (submitFollowed) return;
+                                submitFollowed = true;
+                                $.get("?page=1&qs=following", function (data, status) {
+                                    var $load_following = $('.load_following');
+                                    $load_following.show();
+                                    $('.followed-container').html($(data));
+                                    $load_following.hide();
+                                }).always(function() {
+                                    submitFollowed = true;
+                                });
                             } else if (tab[0].text.toLowerCase() === 'skyline') {
-                                if (typeof followed['waypoint'] !== 'undefined')
-                                    followed['waypoint'].destroy();
-                                infinite['waypoint'].enable();
                             }
                         });
 
