--- a/skyfolk/templates/account/follow_entries.html
+++ b/skyfolk/templates/account/follow_entries.html
@@ -4,17 +4,17 @@
     {% for item in friends_top12 %}
         <div class="item-followed col l6 s12">
             <div class="following-item" id="friend-{{ item.user_id }}">
-                <div class="usr-img img-responsive">{% avatar item.title %}</div>
-                <a class="name" href="/profile/{{ item.title }}">{{ item.first_name }} {{ item.last_name }}
-                    ({{ item.title }})</a>
+                <div class="usr-img img-responsive">{% avatar item %}</div>
+                <a class="name" href="/profile/{{ item.username }}">{{ item.first_name }} {{ item.last_name }}
+                    @{{ item.username }}</a>
             </div>
         </div>
     {% endfor %}
 </div>
-{% if friend_page %}
+{% if followed.has_next %}
     <div class="row center">
         <a class="infinite-more-followed waves-effect waves-light btn-large blue darken-1 white-text center"
-           href="?page={{ friend_page }}&qs=following"><i class="material-icons">add</i></a>
+           href="?page={{ followed.next_page_number }}&qs=following"><i class="material-icons">add</i></a>
         <div class="progress load_following" style="display: none">
             <div class="indeterminate blue darken-1"></div>
         </div>
