--- a/skyfolk/templates/groups/user_likes.html
+++ b/skyfolk/templates/groups/user_likes.html
@@ -4,17 +4,45 @@ Template para los seguidores de un perfil
 {% endcomment %}
 {% block title %} <title>Usuarios de {{ group.name }}</title> {% endblock %}
 {% block extra-css %}
-<link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/amigos.css" onload="if(media!='all')media='all'">
+    <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/amigos.css" onload="if(media!='all')media='all'">
 {% endblock %}
 {% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col l12 m10 s12 container-responsive">
-            <div class="row">
-                {% include "groups/user_list_page.html" %}
+    <div class="container">
+        <div class="row">
+            <div class="col l12 m10 s12 container-responsive">
+                <div class="row">
+                    {% include "groups/user_list_page.html" %}
+                </div>
             </div>
         </div>
+        <div class="row">
+            {% if is_paginated %}
+                <ul class="pagination center">
+                    {% if page_obj.has_previous %}
+                        <li><a href="?page={{ page_obj.previous_page_number }}"><i
+                                class="material-icons">chevron_left</i></a>
+                        </li>
+                    {% else %}
+                        <li class="disabled"><span><i class="material-icons">chevron_left</i></span></li>
+                    {% endif %}
+                    {% for i in paginator.page_range %}
+                        {% if page_obj.number == i %}
+                            <li class="active blue darken-1 white-text"><span>{{ i }}</span></li>
+                        {% else %}
+                            <li class="waves-effect"><a href="?page={{ i }}">{{ i }}</a></li>
+                        {% endif %}
+                    {% endfor %}
+                    {% if page_obj.has_next %}
+                        <li><a href="?page={{ page_obj.next_page_number }}">
+                            <i class="material-icons">chevron_right</i>
+                        </a></li>
+                    {% else %}
+                        <li class="disabled"><span>
+                <i class="material-icons">chevron_right</i>
+        </span></li>
+                    {% endif %}
+                </ul>
+            {% endif %}
+        </div>
     </div>
-    {{ pagination|safe }}
-</div>
 {% endblock %}
