--- a/skyfolk/templates/groups/followers.html
+++ b/skyfolk/templates/groups/followers.html
@@ -8,7 +8,7 @@
 {% endblock %}
 {% block content %}
     <div class="container">
-        <input id="group_id" type="hidden" value="{{ group.group_ptr_id }}" />
+        <input id="group_id" type="hidden" value="{{ group.group_ptr_id }}"/>
         <div class="row">
             <div class="col l12 m10 s12 container-responsive">
                 <div class="row">
@@ -16,9 +16,34 @@
                 </div>
             </div>
         </div>
-        {% if pagination %}
-        {{ pagination|safe }}
-        {% endif %}
-        <script type="text/javascript" src="{{ STATIC_URL}}js/groups.js"></script>
+        <div class="row">
+            {% if is_paginated %}
+                <ul class="pagination center">
+                    {% if page_obj.has_previous %}
+                        <li><a href="?page={{ page_obj.previous_page_number }}"><i class="material-icons">chevron_left</i></a>
+                        </li>
+                    {% else %}
+                        <li class="disabled"><span><i class="material-icons">chevron_left</i></span></li>
+                    {% endif %}
+                    {% for i in paginator.page_range %}
+                        {% if page_obj.number == i %}
+                            <li class="active blue darken-1 white-text"><span>{{ i }}</span></li>
+                        {% else %}
+                            <li class="waves-effect"><a href="?page={{ i }}">{{ i }}</a></li>
+                        {% endif %}
+                    {% endfor %}
+                    {% if page_obj.has_next %}
+                        <li><a href="?page={{ page_obj.next_page_number }}">
+                            <i class="material-icons">chevron_right</i>
+                        </a></li>
+                    {% else %}
+                        <li class="disabled"><span>
+                <i class="material-icons">chevron_right</i>
+        </span></li>
+                    {% endif %}
+                </ul>
+            {% endif %}
+        </div>
+        <script type="text/javascript" src="{{ STATIC_URL }}js/groups.js"></script>
     </div>
 {% endblock %}
