--- a/skyfolk/templates/account/relations.html
+++ b/skyfolk/templates/account/relations.html
@@ -5,34 +5,60 @@ Template para los seguidores de un perfil
 {% block title %}<title>{% if url_name == "followers" %}Seguidores de{% else %}
     Seguidos{% endif %} {{ username }}</title> {% endblock %}
 {% block extra-css %}
-<link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/amigos.css">
+    <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/amigos.css">
 {% endblock %}
 {% block content %}
-<div class="container"> 
-    <div class="row"> 
-        <div class="col l12 m10 s12 container-responsive">
-            {% if user.username == username %}
-            <div class="row">
-                <div id="by_affinity">
-                    
+    <div class="container">
+        <div class="row">
+            <div class="col l12 m10 s12 container-responsive">
+                {% if user.username == username %}
+                    <div class="row">
+                        <div id="by_affinity">
+
+                        </div>
+                        <div class="divider"></div>
+                    </div>
+                {% endif %}
+                <div class="row">
+                    {% include "account/relations_page.html" %}
                 </div>
-                <div class="divider"></div>
-            </div>
-            {% endif %}
-            <div class="row">
-                {% include "account/relations_page.html" %}
             </div>
         </div>
+        <div class="row">
+            {% if is_paginated %}
+                <ul class="pagination center">
+                    {% if page_obj.has_previous %}
+                        <li><a href="?page={{ page_obj.previous_page_number }}"><i
+                                class="material-icons">chevron_left</i></a>
+                        </li>
+                    {% else %}
+                        <li class="disabled"><span><i class="material-icons">chevron_left</i></span></li>
+                    {% endif %}
+                    {% for i in paginator.page_range %}
+                        {% if page_obj.number == i %}
+                            <li class="active blue darken-1 white-text"><span>{{ i }}</span></li>
+                        {% else %}
+                            <li class="waves-effect"><a href="?page={{ i }}">{{ i }}</a></li>
+                        {% endif %}
+                    {% endfor %}
+                    {% if page_obj.has_next %}
+                        <li><a href="?page={{ page_obj.next_page_number }}">
+                            <i class="material-icons">chevron_right</i>
+                        </a></li>
+                    {% else %}
+                        <li class="disabled"><span>
+                <i class="material-icons">chevron_right</i>
+        </span></li>
+                    {% endif %}
+                </ul>
+            {% endif %}
+        </div>
     </div>
-    {% if pagination %}
-        {{ pagination|safe }}
+    <script src="{{ STATIC_URL }}js/friends.js"></script>
+    {% if url_name == "following" %}
+        <script>
+            $('#menu-hr').find('li:nth-child(3)').css('background-color', 'rgba(0,0,0,0.1)');
+        </script>
     {% endif %}
-</div>
-<script src="{{ STATIC_URL }}js/friends.js"></script>
-{% if url_name == "following" %}
-<script>
-    $('#menu-hr').find('li:nth-child(3)').css('background-color', 'rgba(0,0,0,0.1)');
-</script>
-{% endif %}
-<script src="{{ STATIC_URL }}js/{{ component }}"></script>
+    <script src="{{ STATIC_URL }}js/{{ component }}"></script>
 {% endblock %}
