--- a/skyfolk/templates/groups/tab-themes.html
+++ b/skyfolk/templates/groups/tab-themes.html
@@ -29,7 +29,7 @@
                     <div class="file-field input-field">
                         <div class="btn waves-effect waves-light btn left blue">
                             <span>Imágen del tema</span>
-                            {{ theme_form.image }}
+                            <input name="image" type="file">
                         </div>
                         <div class="file-path-wrapper">
                             <input class="file-path validate" type="text">
@@ -40,7 +40,7 @@
             </form>
         </div>
     </div>
-    <ul class="theme-list">
-
-    </ul>
+    <div class="row theme-list">
+        {% include "groups/group_themes.html" %}
+    </div>
 </div>
