+ Mejoras en grupos

--- a/skyfolk/static/sass/group_profile.sass
+++ b/skyfolk/static/sass/group_profile.sass
@@ -21,7 +21,7 @@ $greycolor: #eeeeee
     font-size: 1.6em
   .group-description
     font-size: 1.2em
-  
+
 .informacion
   > .group-comment, > .group-like, > .group-follow
     cursor: pointer
@@ -70,3 +70,13 @@ $greycolor: #eeeeee
       &:hover
         box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15)
         color: $blueskyfolk
+
+.theme
+  .card-action > p
+    > span
+      cursor: pointer
+      user-select: none
+      -moz-user-select: none
+      -khtml-user-select: none
+      -webkit-user-select: none
+      -o-user-select: none
