--- a/skyfolk/templates/groups/tab-themes.html
+++ b/skyfolk/templates/groups/tab-themes.html
@@ -1,7 +1,7 @@
 {% comment %}
   Pestaña de amigos en el perfil
 {% endcomment %}
-<div id="tab-amigos">
+<div id="tab-themes">
     <div class="row center"><br>
         <button type="submit" class="waves-effect waves-light btn blue open_theme_form">Nuevo tema</button>
     </div>
