--- a/skyfolk/templates/groups/group_profile.html
+++ b/skyfolk/templates/groups/group_profile.html
@@ -107,7 +107,7 @@
                                 <ul class="unstyled table fullwidth links">
                                     <li class="tab" id="li-tab-comentarios"><a
                                             href="#tab-comentarios">skyline</a></li>
-                                    <li class="tab" id="li-tab-amigos"><a href="#tab-amigos">temas</a></li>
+                                    <li class="tab" id="li-tab-themes"><a href="#tab-themes">temas</a></li>
                                 </ul>
                                 <div class="unstyled content" id="hood-tabs">
                                     {% comment %}
