--- a/skyfolk/templates/groups/group_profile.html
+++ b/skyfolk/templates/groups/group_profile.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/comentarios.css">
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/group_profile.css">
 {% endblock %}
-{% block title %} <title> Grupo {{ group_profile.name }}</title> {% endblock %}
+{% block title %} <title> Skyfolk / Grupo {{ group_profile.name }}</title> {% endblock %}
 {% block content %}
     <div class="row">
         <div id="group_form_wrapper" class="col l5 m12 s12 default-div compose-div" style="display:none;">
