--- a/skyfolk/templates/account/publication_detail.html
+++ b/skyfolk/templates/account/publication_detail.html
@@ -58,7 +58,7 @@
         </div>
         <div class="infinite-container">
          {% for node in publication %}
-            <div class="row row-pub infinite-item" id="pub-{{ node.pk }}">
+            <div class="row row-pub infinite-item" id="pub-{{ node.pk }}" {% if node.parent %}data-parent="{{ node.parent.id }}"{% endif %}>
                 <div class="col s12">
                     <div class="row">
                         <div class="col wrapper{% if node.level == 0 %} col offset-l1 l10 m11 s12 {% else %} offset-l2 l9 m10 s11{% endif %}" data-id="{{ user.pk }}" {% if node.level > 0 %}style="border-right: 2px solid #1e88e5;"{% endif %}>
