--- a/skyfolk/templates/groups/board_theme.html
+++ b/skyfolk/templates/groups/board_theme.html
@@ -46,12 +46,12 @@
                 {% include "groups/new_reply_theme.html" %}
             </div>
         </div>
-        <div class="row">
+        <div class="row theme-publications">
             {% for pub in publications %}
                 <div class="col s12 infinite-item">
                     <div class="row">
                         <div class="col wrapper{% if pub.level == 0 %} col push-l1 l9 s12 {% else %}  push-l2 l9 m10 s11{% endif %}"
-                             data-id="{{ pub.pk }}"
+                             data-id="{{ pub.pk }}" {% if pub.parent %}data-parent="{{ pub.parent.id }}"{% endif %}
                              {% if pub.level > 0 %}style="border-right: 2px solid #1e88e5;"{% endif %}>
                              <span id="check-{{ pub.pk }}" class="top-options zoom-pub tooltipped"
                                    data-position="bottom"
